--- a/css/lp-fnb.css
+++ b/css/lp-fnb.css
@@ -1,4 +1,5 @@
-body.lp-fnb { outline: 8px solid red !important; }
+html { background: #ff0 !important; }
+
 
 
 /* =========================================================
